--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 
-spring.datasource.url=jdbc:mysql://localhost:3306/userdb?useSSL=false&serverTimezone=UTC&useLegacyDatetimeCode=false
+spring.datasource.url=jdbc:mysql://db:3306/userdb?useSSL=false&serverTimezone=UTC&useLegacyDatetimeCode=false
 
 spring.datasource.username=user1
 spring.datasource.password=password
